objects/PMC_Country__mdt.object
<CustomObject>
    <description>This list is used to store Country information.</description>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <label>Country Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_DH__c</fullName>
        <label>Position_DH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PMC Country</label>
    <listViews>
        <fullName>All_DH_States</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Country_Code__c</columns>
        <columns>Country_Name__c</columns>
        <columns>Position_DH__c</columns>
        <columns>State__c</columns>
        <columns>State_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All DH States</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>PMC Country</pluralLabel>
</CustomObject>